# RAVA

./: .env.example  .gitignore  LICENSE  RAVA_revised_emnlp2026.aux  RAVA_revised_emnlp2026.fdb_latexmk  RAVA_revised_emnlp2026.fls  RAVA_revised_emnlp2026.tex  README.md  pyproject.toml
configs/: base.yaml
configs/domains/: finance.yaml  healthcare.yaml  hr.yaml
configs/envs/: py314.conda.yml
configs/experiments/: default_sweep.yaml  diagnostic_secondary_ollama.yaml  evidence_v2_ollama.yaml  final_a6_dual_model.yaml  ollama_cloud_eval.yaml  ollama_cloud_eval_enhanced.yaml  ollama_cloud_eval_resume_20260227_104109.yaml  ollama_cloud_eval_seed42.yaml  ollama_cloud_eval_stress.yaml  ollama_single_model_3domain_power2h.yaml  ollama_single_model_3domain_power2h_resume_fast.yaml  ollama_single_model_hc3_compact.yaml  ollama_single_model_hc3_full.yaml  paper6_fast_ollama.yaml  paper6_power12_ollama.yaml  paper6_supplemental_agentic_stress.yaml  paper_hybrid_ollama.yaml  primary_certification_ollama.yaml  smoke.yaml
scripts/: benchmark_agent_runtime.py  cache_prices.py  download_datasets.py  evaluate_runs.py  evidence_report.py  fetch_sample_filings.py  generate_agentic_stress_hr.py  generate_synthetic_resumes.py  make_result_plots.py  make_tables.py  preprocess_datasets.py  run_experiments.py
specs/: finance.yaml  healthcare.yaml  hr.yaml
src/rava/: __init__.py  (+2 more)
tests/: test_agentic_stress.py  test_calibration_maps.py  test_cli_canary_resume.py  test_cli_smoke.py  test_compliance_eval.py  test_confidence_parsing.py  test_dataset_strict.py  test_evidence_grade.py  test_finben_routing.py  test_langgraph_legacy_parity.py  test_langgraph_state_flow.py  test_metrics_fairness.py  test_paper_artifacts.py  test_provider_agent_cache.py  test_provider_openai.py  test_provider_retry.py  test_result_plots.py  test_run_quality.py  test_runner_audit_cache.py  test_runner_audited_metrics.py  test_runner_example_parallelism.py  test_runner_failfast.py  test_runner_sampling.py  test_scoring.py  test_spec_compose.py  test_stats_gate.py  test_tables_validity.py
(+68 files in other folders)
