[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rava"
version = "0.1.0"
description = "Regulatory-Aligned Verification for AI Agents research framework"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "RAVA Team" }]
dependencies = [
  "typer>=0.24.1",
  "rich>=13.9.4",
  "pydantic>=2.10.5",
  "PyYAML>=6.0.2",
  "tqdm>=4.67.1",
  "numpy>=2.1.0",
  "pandas>=2.2.3",
  "python-dotenv>=1.0.1",
  "langchain==1.2.10",
  "langchain-core==1.2.18",
  "langchain-openai==1.1.11",
  "langgraph==1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
]
full = [
  "datasets>=4.6.0",
  "kaggle>=2.0.0",
  "transformers>=5.2.0",
  "matplotlib>=3.10.0",
]

[project.scripts]
rava = "rava.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
